# netagent

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  app.py  chainlit.md  ctl.sh  data_layer.py  pyproject.toml  start.py  test_integration.py  upgrade.sh  webui-ctl.sh
.chainlit/: config.toml
agent/: approval.py  graph.py  llm.py  mcp_bridge.py
agent/tools/: rag.py
config/: branding.yaml  mcp.yaml  mcp.yaml.example  models.yaml  puppeteer-config.json
knowledge_base/: attach-failure-modes.md  open5gs-logs-and-configs.md  open5gs-nf-overview.md  snssai-and-slicing.md  subscriber-profile-fields.md
prompts/: system.txt
scripts/: build_knowledge_base.py  install_service.sh
