[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "5g-demo-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=1.3.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",
    "plotly>=5.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["agent", "visualizations", "prompts"]
