[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "5g-demo-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.11.0",
    "langgraph>=1.2.0",
    "langchain-openai>=1.2.0",
    "langchain-ollama>=1.1.0",
    "langchain-mcp-adapters>=0.2.0",
    "mcp>=1.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.5.0",
    "langchain-text-splitters>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["agent", "visualizations", "prompts"]
